--- a/src/Module 3/Hands-on - Data Quality Assessment & Profiling/QUes_2.ipynb
+++ b/src/Module 3/Hands-on - Data Quality Assessment & Profiling/QUes_2.ipynb
@@ -2,15 +2,94 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing values in 'Age': 177\n",
+      "Number of duplicate rows: 107\n",
+      "\n",
+      "--- Missing Values Report ---\n",
+      "         Column  Missing Values\n",
+      "0      survived               0\n",
+      "1        pclass               0\n",
+      "2           sex               0\n",
+      "3           age             177\n",
+      "4         sibsp               0\n",
+      "5         parch               0\n",
+      "6          fare               0\n",
+      "7      embarked               2\n",
+      "8         class               0\n",
+      "9           who               0\n",
+      "10   adult_male               0\n",
+      "11         deck             688\n",
+      "12  embark_town               2\n",
+      "13        alive               0\n",
+      "14        alone               0\n",
+      "\n",
+      "--- Number of Duplicates ---\n",
+      "107\n",
+      "\n",
+      "--- Basic Dataset Statistics ---\n",
+      "          survived      pclass   sex         age       sibsp       parch  \\\n",
+      "count   891.000000  891.000000   891  714.000000  891.000000  891.000000   \n",
+      "unique         NaN         NaN     2         NaN         NaN         NaN   \n",
+      "top            NaN         NaN  male         NaN         NaN         NaN   \n",
+      "freq           NaN         NaN   577         NaN         NaN         NaN   \n",
+      "mean      0.383838    2.308642   NaN   29.699118    0.523008    0.381594   \n",
+      "std       0.486592    0.836071   NaN   14.526497    1.102743    0.806057   \n",
+      "min       0.000000    1.000000   NaN    0.420000    0.000000    0.000000   \n",
+      "25%       0.000000    2.000000   NaN   20.125000    0.000000    0.000000   \n",
+      "50%       0.000000    3.000000   NaN   28.000000    0.000000    0.000000   \n",
+      "75%       1.000000    3.000000   NaN   38.000000    1.000000    0.000000   \n",
+      "max       1.000000    3.000000   NaN   80.000000    8.000000    6.000000   \n",
+      "\n",
+      "              fare embarked  class  who adult_male deck  embark_town alive  \\\n",
+      "count   891.000000      889    891  891        891  203          889   891   \n",
+      "unique         NaN        3      3    3          2    7            3     2   \n",
+      "top            NaN        S  Third  man       True    C  Southampton    no   \n",
+      "freq           NaN      644    491  537        537   59          644   549   \n",
+      "mean     32.204208      NaN    NaN  NaN        NaN  NaN          NaN   NaN   \n",
+      "std      49.693429      NaN    NaN  NaN        NaN  NaN          NaN   NaN   \n",
+      "min       0.000000      NaN    NaN  NaN        NaN  NaN          NaN   NaN   \n",
+      "25%       7.910400      NaN    NaN  NaN        NaN  NaN          NaN   NaN   \n",
+      "50%      14.454200      NaN    NaN  NaN        NaN  NaN          NaN   NaN   \n",
+      "75%      31.000000      NaN    NaN  NaN        NaN  NaN          NaN   NaN   \n",
+      "max     512.329200      NaN    NaN  NaN        NaN  NaN          NaN   NaN   \n",
+      "\n",
+      "       alone  \n",
+      "count    891  \n",
+      "unique     2  \n",
+      "top     True  \n",
+      "freq     537  \n",
+      "mean     NaN  \n",
+      "std      NaN  \n",
+      "min      NaN  \n",
+      "25%      NaN  \n",
+      "50%      NaN  \n",
+      "75%      NaN  \n",
+      "max      NaN  \n"
+     ]
+    }
+   ],
    "source": [
     "# Part 1: Load a Dataset & Check Missing Values\n",
     "\n",
     "# Task 1: Titanic Dataset\n",
     "# - Load the dataset using Pandas.\n",
     "# - Check for missing values in the 'Age' column.\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Load Titanic dataset (from seaborn for convenience)\n",
+    "import seaborn as sns\n",
+    "df = sns.load_dataset('titanic')\n",
+    "\n",
+    "# Display missing values in 'Age' column\n",
+    "missing_age = df['age'].isnull().sum()\n",
+    "print(f\"Missing values in 'Age': {missing_age}\")\n",
     "\n",
     "\n",
     "\n",
@@ -23,6 +102,9 @@
     "# Task 2: Duplicate Rows in Titanic Dataset\n",
     "# - Identify any duplicate rows in the dataset.\n",
     "\n",
+    "# Check for duplicate rows\n",
+    "duplicate_rows = df.duplicated().sum()\n",
+    "print(f\"Number of duplicate rows: {duplicate_rows}\")\n",
     "\n",
     "\n",
     "\n",
@@ -37,6 +119,22 @@
     "# Task 3: Titanic Dataset Overview\n",
     "# - Create a simple report of missing values, duplicates, and some basic statistics for the Titanic dataset.\n",
     "\n",
+    "# Generate missing values report\n",
+    "missing_report = df.isnull().sum().reset_index()\n",
+    "missing_report.columns = ['Column', 'Missing Values']\n",
+    "\n",
+    "# Basic statistics\n",
+    "basic_stats = df.describe(include='all')\n",
+    "\n",
+    "# Print full report\n",
+    "print(\"\\n--- Missing Values Report ---\")\n",
+    "print(missing_report)\n",
+    "\n",
+    "print(\"\\n--- Number of Duplicates ---\")\n",
+    "print(duplicate_rows)\n",
+    "\n",
+    "print(\"\\n--- Basic Dataset Statistics ---\")\n",
+    "print(basic_stats)\n",
     "\n",
     "\n",
     "\n",
@@ -45,8 +143,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
