--- a/src/Module 3/Hands-on - Data Quality Assessment & Profiling/QUes_3.ipynb
+++ b/src/Module 3/Hands-on - Data Quality Assessment & Profiling/QUes_3.ipynb
@@ -2,9 +2,150 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preview of the dataset:\n",
+      "   survived  pclass     sex   age  sibsp  parch     fare embarked  class  \\\n",
+      "0         0       3    male  22.0      1      0   7.2500        S  Third   \n",
+      "1         1       1  female  38.0      1      0  71.2833        C  First   \n",
+      "2         1       3  female  26.0      0      0   7.9250        S  Third   \n",
+      "3         1       1  female  35.0      1      0  53.1000        S  First   \n",
+      "4         0       3    male  35.0      0      0   8.0500        S  Third   \n",
+      "\n",
+      "     who  adult_male deck  embark_town alive  alone  \n",
+      "0    man        True  NaN  Southampton    no  False  \n",
+      "1  woman       False    C    Cherbourg   yes  False  \n",
+      "2  woman       False  NaN  Southampton   yes   True  \n",
+      "3  woman       False    C  Southampton   yes  False  \n",
+      "4    man        True  NaN  Southampton    no   True  \n",
+      "\n",
+      "--- Missing Values ---\n",
+      "age            177\n",
+      "embarked         2\n",
+      "deck           688\n",
+      "embark_town      2\n",
+      "dtype: int64\n",
+      "\n",
+      "--- Duplicate Rows ---\n",
+      "Total Duplicates: 107\n",
+      "     survived  pclass     sex   age  sibsp  parch     fare embarked   class  \\\n",
+      "47          1       3  female   NaN      0      0   7.7500        Q   Third   \n",
+      "76          0       3    male   NaN      0      0   7.8958        S   Third   \n",
+      "77          0       3    male   NaN      0      0   8.0500        S   Third   \n",
+      "87          0       3    male   NaN      0      0   8.0500        S   Third   \n",
+      "95          0       3    male   NaN      0      0   8.0500        S   Third   \n",
+      "..        ...     ...     ...   ...    ...    ...      ...      ...     ...   \n",
+      "870         0       3    male  26.0      0      0   7.8958        S   Third   \n",
+      "877         0       3    male  19.0      0      0   7.8958        S   Third   \n",
+      "878         0       3    male   NaN      0      0   7.8958        S   Third   \n",
+      "884         0       3    male  25.0      0      0   7.0500        S   Third   \n",
+      "886         0       2    male  27.0      0      0  13.0000        S  Second   \n",
+      "\n",
+      "       who  adult_male deck  embark_town alive  alone  \n",
+      "47   woman       False  NaN   Queenstown   yes   True  \n",
+      "76     man        True  NaN  Southampton    no   True  \n",
+      "77     man        True  NaN  Southampton    no   True  \n",
+      "87     man        True  NaN  Southampton    no   True  \n",
+      "95     man        True  NaN  Southampton    no   True  \n",
+      "..     ...         ...  ...          ...   ...    ...  \n",
+      "870    man        True  NaN  Southampton    no   True  \n",
+      "877    man        True  NaN  Southampton    no   True  \n",
+      "878    man        True  NaN  Southampton    no   True  \n",
+      "884    man        True  NaN  Southampton    no   True  \n",
+      "886    man        True  NaN  Southampton    no   True  \n",
+      "\n",
+      "[107 rows x 15 columns]\n",
+      "\n",
+      "--- Basic Statistics ---\n",
+      "          survived      pclass   sex         age       sibsp       parch  \\\n",
+      "count   891.000000  891.000000   891  714.000000  891.000000  891.000000   \n",
+      "unique         NaN         NaN     2         NaN         NaN         NaN   \n",
+      "top            NaN         NaN  male         NaN         NaN         NaN   \n",
+      "freq           NaN         NaN   577         NaN         NaN         NaN   \n",
+      "mean      0.383838    2.308642   NaN   29.699118    0.523008    0.381594   \n",
+      "std       0.486592    0.836071   NaN   14.526497    1.102743    0.806057   \n",
+      "min       0.000000    1.000000   NaN    0.420000    0.000000    0.000000   \n",
+      "25%       0.000000    2.000000   NaN   20.125000    0.000000    0.000000   \n",
+      "50%       0.000000    3.000000   NaN   28.000000    0.000000    0.000000   \n",
+      "75%       1.000000    3.000000   NaN   38.000000    1.000000    0.000000   \n",
+      "max       1.000000    3.000000   NaN   80.000000    8.000000    6.000000   \n",
+      "\n",
+      "              fare embarked  class  who adult_male deck  embark_town alive  \\\n",
+      "count   891.000000      889    891  891        891  203          889   891   \n",
+      "unique         NaN        3      3    3          2    7            3     2   \n",
+      "top            NaN        S  Third  man       True    C  Southampton    no   \n",
+      "freq           NaN      644    491  537        537   59          644   549   \n",
+      "mean     32.204208      NaN    NaN  NaN        NaN  NaN          NaN   NaN   \n",
+      "std      49.693429      NaN    NaN  NaN        NaN  NaN          NaN   NaN   \n",
+      "min       0.000000      NaN    NaN  NaN        NaN  NaN          NaN   NaN   \n",
+      "25%       7.910400      NaN    NaN  NaN        NaN  NaN          NaN   NaN   \n",
+      "50%      14.454200      NaN    NaN  NaN        NaN  NaN          NaN   NaN   \n",
+      "75%      31.000000      NaN    NaN  NaN        NaN  NaN          NaN   NaN   \n",
+      "max     512.329200      NaN    NaN  NaN        NaN  NaN          NaN   NaN   \n",
+      "\n",
+      "       alone  \n",
+      "count    891  \n",
+      "unique     2  \n",
+      "top     True  \n",
+      "freq     537  \n",
+      "mean     NaN  \n",
+      "std      NaN  \n",
+      "min      NaN  \n",
+      "25%      NaN  \n",
+      "50%      NaN  \n",
+      "75%      NaN  \n",
+      "max      NaN  \n",
+      "\n",
+      "--- Data Types ---\n",
+      "survived          int64\n",
+      "pclass            int64\n",
+      "sex              object\n",
+      "age             float64\n",
+      "sibsp             int64\n",
+      "parch             int64\n",
+      "fare            float64\n",
+      "embarked         object\n",
+      "class          category\n",
+      "who              object\n",
+      "adult_male         bool\n",
+      "deck           category\n",
+      "embark_town      object\n",
+      "alive            object\n",
+      "alone              bool\n",
+      "dtype: object\n",
+      "\n",
+      "--- Unique Values in Categorical Columns ---\n",
+      "sex: ['male' 'female']\n",
+      "embarked: ['S' 'C' 'Q' nan]\n",
+      "who: ['man' 'woman' 'child']\n",
+      "embark_town: ['Southampton' 'Cherbourg' 'Queenstown' nan]\n",
+      "alive: ['no' 'yes']\n",
+      "\n",
+      "--- Data Quality Summary ---\n",
+      "            Data Type  Missing Values  Unique Values  Duplicate Rows\n",
+      "survived        int64               0              2             107\n",
+      "pclass          int64               0              3             107\n",
+      "sex            object               0              2             107\n",
+      "age           float64             177             88             107\n",
+      "sibsp           int64               0              7             107\n",
+      "parch           int64               0              7             107\n",
+      "fare          float64               0            248             107\n",
+      "embarked       object               2              3             107\n",
+      "class        category               0              3             107\n",
+      "who            object               0              3             107\n",
+      "adult_male       bool               0              2             107\n",
+      "deck         category             688              7             107\n",
+      "embark_town    object               2              3             107\n",
+      "alive          object               0              2             107\n",
+      "alone            bool               0              2             107\n"
+     ]
+    }
+   ],
    "source": [
     "# Part 1: Load a Dataset & Check Missing Values\n",
     "\n",
@@ -13,6 +154,74 @@
     "# - Check for missing values in the entire dataset.\n",
     "\n",
     "\n",
+    "# Import necessary libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Load the Titanic dataset\n",
+    "# You can replace the path with your dataset location or use seaborn for example dataset\n",
+    "try:\n",
+    "    import seaborn as sns\n",
+    "    df = sns.load_dataset('titanic')\n",
+    "except:\n",
+    "    df = pd.read_csv('titanic.csv')  # fallback\n",
+    "\n",
+    "# Display first 5 rows\n",
+    "print(\"Preview of the dataset:\")\n",
+    "print(df.head())\n",
+    "\n",
+    "# -------------------------------\n",
+    "# Part 1: Missing Value Analysis\n",
+    "# -------------------------------\n",
+    "\n",
+    "print(\"\\n--- Missing Values ---\")\n",
+    "missing_values = df.isnull().sum()\n",
+    "print(missing_values[missing_values > 0])\n",
+    "\n",
+    "# -------------------------------\n",
+    "# Part 2: Duplicates Detection\n",
+    "# -------------------------------\n",
+    "\n",
+    "print(\"\\n--- Duplicate Rows ---\")\n",
+    "duplicates = df[df.duplicated()]\n",
+    "print(f\"Total Duplicates: {duplicates.shape[0]}\")\n",
+    "if not duplicates.empty:\n",
+    "    print(duplicates)\n",
+    "\n",
+    "# -------------------------------\n",
+    "# Part 3: Basic Statistics\n",
+    "# -------------------------------\n",
+    "\n",
+    "print(\"\\n--- Basic Statistics ---\")\n",
+    "print(df.describe(include='all'))\n",
+    "\n",
+    "# -------------------------------\n",
+    "# Part 4: Data Types & Inconsistencies\n",
+    "# -------------------------------\n",
+    "\n",
+    "print(\"\\n--- Data Types ---\")\n",
+    "print(df.dtypes)\n",
+    "\n",
+    "# Detect inconsistent categorical values (example: \"male\", \"Male\", etc.)\n",
+    "print(\"\\n--- Unique Values in Categorical Columns ---\")\n",
+    "for col in df.select_dtypes(include='object'):\n",
+    "    print(f\"{col}: {df[col].unique()}\")\n",
+    "\n",
+    "# -------------------------------\n",
+    "# Part 5: Final Data Quality Summary\n",
+    "# -------------------------------\n",
+    "\n",
+    "print(\"\\n--- Data Quality Summary ---\")\n",
+    "data_quality_report = pd.DataFrame({\n",
+    "    \"Data Type\": df.dtypes,\n",
+    "    \"Missing Values\": df.isnull().sum(),\n",
+    "    \"Unique Values\": df.nunique(),\n",
+    "    \"Duplicate Rows\": [df.duplicated().sum()] * len(df.columns)\n",
+    "})\n",
+    "print(data_quality_report)\n",
+    "\n",
+    "# Save report if needed\n",
+    "# data_quality_report.to_csv(\"data_quality_report.csv\")\n",
     "\n",
     "\n",
     "\n",
@@ -44,8 +253,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
