Add data quality assessment notebook for Module 3 Hands-on (Ques_3)

--- a/src/Module 3/Hands-on - Data Quality Assessment & Profiling/QUes_3.ipynb
+++ b/src/Module 3/Hands-on - Data Quality Assessment & Profiling/QUes_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,89 @@
       "deck         category             688              7             107\n",
       "embark_town    object               2              3             107\n",
       "alive          object               0              2             107\n",
-      "alone            bool               0              2             107\n"
+      "alone            bool               0              2             107\n",
+      "📄 Preview of Data:\n",
+      "   survived  pclass     sex   age  sibsp  parch     fare embarked  class  \\\n",
+      "0         0       3    male  22.0      1      0   7.2500        S  Third   \n",
+      "1         1       1  female  38.0      1      0  71.2833        C  First   \n",
+      "2         1       3  female  26.0      0      0   7.9250        S  Third   \n",
+      "3         1       1  female  35.0      1      0  53.1000        S  First   \n",
+      "4         0       3    male  35.0      0      0   8.0500        S  Third   \n",
+      "\n",
+      "     who  adult_male deck  embark_town alive  alone  \n",
+      "0    man        True  NaN  Southampton    no  False  \n",
+      "1  woman       False    C    Cherbourg   yes  False  \n",
+      "2  woman       False  NaN  Southampton   yes   True  \n",
+      "3  woman       False    C  Southampton   yes  False  \n",
+      "4    man        True  NaN  Southampton    no   True  \n",
+      "\n",
+      "🔍 Missing Values:\n",
+      "age            177\n",
+      "embarked         2\n",
+      "deck           688\n",
+      "embark_town      2\n",
+      "dtype: int64\n",
+      "\n",
+      "🔁 Duplicate Rows:\n",
+      "Found 107 duplicates.\n",
+      "\n",
+      "📊 Basic Statistics:\n",
+      "          survived      pclass   sex         age       sibsp       parch  \\\n",
+      "count   891.000000  891.000000   891  714.000000  891.000000  891.000000   \n",
+      "unique         NaN         NaN     2         NaN         NaN         NaN   \n",
+      "top            NaN         NaN  male         NaN         NaN         NaN   \n",
+      "freq           NaN         NaN   577         NaN         NaN         NaN   \n",
+      "mean      0.383838    2.308642   NaN   29.699118    0.523008    0.381594   \n",
+      "std       0.486592    0.836071   NaN   14.526497    1.102743    0.806057   \n",
+      "min       0.000000    1.000000   NaN    0.420000    0.000000    0.000000   \n",
+      "25%       0.000000    2.000000   NaN   20.125000    0.000000    0.000000   \n",
+      "50%       0.000000    3.000000   NaN   28.000000    0.000000    0.000000   \n",
+      "75%       1.000000    3.000000   NaN   38.000000    1.000000    0.000000   \n",
+      "max       1.000000    3.000000   NaN   80.000000    8.000000    6.000000   \n",
+      "\n",
+      "              fare embarked  class  who adult_male deck  embark_town alive  \\\n",
+      "count   891.000000      889    891  891        891  203          889   891   \n",
+      "unique         NaN        3      3    3          2    7            3     2   \n",
+      "top            NaN        S  Third  man       True    C  Southampton    no   \n",
+      "freq           NaN      644    491  537        537   59          644   549   \n",
+      "mean     32.204208      NaN    NaN  NaN        NaN  NaN          NaN   NaN   \n",
+      "std      49.693429      NaN    NaN  NaN        NaN  NaN          NaN   NaN   \n",
+      "min       0.000000      NaN    NaN  NaN        NaN  NaN          NaN   NaN   \n",
+      "25%       7.910400      NaN    NaN  NaN        NaN  NaN          NaN   NaN   \n",
+      "50%      14.454200      NaN    NaN  NaN        NaN  NaN          NaN   NaN   \n",
+      "75%      31.000000      NaN    NaN  NaN        NaN  NaN          NaN   NaN   \n",
+      "max     512.329200      NaN    NaN  NaN        NaN  NaN          NaN   NaN   \n",
+      "\n",
+      "       alone  \n",
+      "count    891  \n",
+      "unique     2  \n",
+      "top     True  \n",
+      "freq     537  \n",
+      "mean     NaN  \n",
+      "std      NaN  \n",
+      "min      NaN  \n",
+      "25%      NaN  \n",
+      "50%      NaN  \n",
+      "75%      NaN  \n",
+      "max      NaN  \n",
+      "\n",
+      "📝 Data Quality Summary:\n",
+      "            Data Type  Missing Values  Unique Values  Duplicates\n",
+      "survived        int64               0              2         107\n",
+      "pclass          int64               0              3         107\n",
+      "sex            object               0              2         107\n",
+      "age           float64             177             88         107\n",
+      "sibsp           int64               0              7         107\n",
+      "parch           int64               0              7         107\n",
+      "fare          float64               0            248         107\n",
+      "embarked       object               2              3         107\n",
+      "class        category               0              3         107\n",
+      "who            object               0              3         107\n",
+      "adult_male       bool               0              2         107\n",
+      "deck         category             688              7         107\n",
+      "embark_town    object               2              3         107\n",
+      "alive          object               0              2         107\n",
+      "alone            bool               0              2         107\n"
      ]
     }
    ],
@@ -247,6 +329,64 @@
     "# - Generate basic descriptive statistics for the Iris dataset.\n",
     "\n",
     "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "# --- Part 0: Load Dataset Robustly ---\n",
+    "def load_dataset():\n",
+    "    file_path = \"src/Module 3/Hands-on - Data Quality Assessment & Profiling/titanic.csv\"\n",
+    "    if os.path.exists(file_path):\n",
+    "        df = pd.read_csv(file_path)\n",
+    "    else:\n",
+    "        try:\n",
+    "            import seaborn as sns\n",
+    "            df = sns.load_dataset(\"titanic\")\n",
+    "        except:\n",
+    "            raise FileNotFoundError(\"Titanic dataset not found in path or seaborn.\")\n",
+    "    return df\n",
+    "\n",
+    "# --- Part 1: Check Missing Values ---\n",
+    "def check_missing_values(df):\n",
+    "    print(\"\\n🔍 Missing Values:\")\n",
+    "    missing = df.isnull().sum()\n",
+    "    print(missing[missing > 0])\n",
+    "    return missing\n",
+    "\n",
+    "# --- Part 2: Find Duplicates ---\n",
+    "def find_duplicates(df):\n",
+    "    print(\"\\n🔁 Duplicate Rows:\")\n",
+    "    duplicates = df[df.duplicated()]\n",
+    "    print(f\"Found {len(duplicates)} duplicates.\")\n",
+    "    return duplicates\n",
+    "\n",
+    "# --- Part 3: Generate Basic Stats ---\n",
+    "def generate_basic_statistics(df):\n",
+    "    print(\"\\n📊 Basic Statistics:\")\n",
+    "    return df.describe(include='all')\n",
+    "\n",
+    "# --- Part 4: Data Quality Report ---\n",
+    "def data_quality_report(df):\n",
+    "    print(\"\\n📝 Data Quality Summary:\")\n",
+    "    report = pd.DataFrame({\n",
+    "        \"Data Type\": df.dtypes,\n",
+    "        \"Missing Values\": df.isnull().sum(),\n",
+    "        \"Unique Values\": df.nunique(),\n",
+    "        \"Duplicates\": [df.duplicated().sum()] * len(df.columns)\n",
+    "    })\n",
+    "    print(report)\n",
+    "    return report\n",
+    "\n",
+    "# --- Run Data Quality Pipeline ---\n",
+    "df = load_dataset()\n",
+    "print(\"📄 Preview of Data:\")\n",
+    "print(df.head())\n",
+    "\n",
+    "missing = check_missing_values(df)\n",
+    "duplicates = find_duplicates(df)\n",
+    "stats = generate_basic_statistics(df)\n",
+    "print(stats)\n",
+    "quality_report = data_quality_report(df)\n",
     "\n",
     "\n"
    ]
