Add QUes_4.ipynb for data quality assessment and profiling in Module 3

--- a/src/Module 3/Hands-on - Data Quality Assessment & Profiling/QUes_4.ipynb
+++ b/src/Module 3/Hands-on - Data Quality Assessment & Profiling/QUes_4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -12,83 +12,84 @@
       "✅ Customer dataset loaded successfully.\n",
       "\n",
       "📊 First 5 rows of customer data:\n",
-      "   CustomerID           Name                     Email     Phone       Address\n",
-      "0           1       John Doe       johndoe@example.com  555-1234    123 Elm St\n",
-      "1           2     Jane Smith     janesmith@example.com       NaN    456 Oak St\n",
-      "2           3  Alice Johnson  alicejohnson@example.com  555-5678   789 Pine St\n",
-      "3           4      Bob Brown       johndoe@example.com  555-9876  101 Maple St\n",
-      "4           5  Charlie Davis                       NaN  555-1111  202 Birch St\n",
+      "      Name  Age Department  Salary\n",
+      "0    Alice   25         HR   50000\n",
+      "1      Bob   30         IT   60000\n",
+      "2  Charlie   35    Finance   70000\n",
+      "3    David   40         IT   80000\n",
+      "4      Eve   22         HR   52000\n",
       "\n",
-      "🔍 Missing Values:\n",
-      "Email    1\n",
-      "Phone    2\n",
-      "dtype: int64\n",
+      "📋 Columns in the dataset:\n",
+      "Index(['Name', 'Age', 'Department', 'Salary'], dtype='object')\n",
       "\n",
-      "📋 Duplicate Emails:\n",
-      "                 Email\n",
-      "0  johndoe@example.com\n",
-      "\n",
-      "🧾 Data Quality Report Summary:\n",
-      "{'Missing Values': {'Email': 1, 'Phone': 2}, 'Total Duplicate Rows': 0, 'Duplicate Emails': 1}\n"
+      "🔍 Missing Values:\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "\"None of [Index(['Email', 'Phone'], dtype='object')] are in the [columns]\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 48\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[38;5;28mprint\u001b[39m(missing_values)\n\u001b[1;32m     47\u001b[0m \u001b[38;5;66;03m# Check missing values in 'Email' and 'Phone' columns\u001b[39;00m\n\u001b[0;32m---> 48\u001b[0m \u001b[43mcheck_missing_values\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcustomer_df\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43mEMAIL_COLUMN\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mPHONE_COLUMN\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[5], line 44\u001b[0m, in \u001b[0;36mcheck_missing_values\u001b[0;34m(df, columns)\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mcheck_missing_values\u001b[39m(df, columns):\n\u001b[1;32m     43\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m🔍 Missing Values:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 44\u001b[0m     missing_values \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39misnull()\u001b[38;5;241m.\u001b[39msum()\n\u001b[1;32m     45\u001b[0m     \u001b[38;5;28mprint\u001b[39m(missing_values)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/frame.py:3899\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3897\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m is_iterator(key):\n\u001b[1;32m   3898\u001b[0m         key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(key)\n\u001b[0;32m-> 3899\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_indexer_strict\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcolumns\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m   3901\u001b[0m \u001b[38;5;66;03m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[1;32m   3902\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(indexer, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdtype\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mbool\u001b[39m:\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexes/base.py:6115\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[0;34m(self, key, axis_name)\u001b[0m\n\u001b[1;32m   6112\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   6113\u001b[0m     keyarr, indexer, new_indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[0;32m-> 6115\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_raise_if_missing\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkeyarr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mindexer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   6117\u001b[0m keyarr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtake(indexer)\n\u001b[1;32m   6118\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Index):\n\u001b[1;32m   6119\u001b[0m     \u001b[38;5;66;03m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pandas/core/indexes/base.py:6176\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[0;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[1;32m   6174\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m use_interval_msg:\n\u001b[1;32m   6175\u001b[0m         key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(key)\n\u001b[0;32m-> 6176\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone of [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] are in the [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00maxis_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   6178\u001b[0m not_found \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[38;5;241m.\u001b[39mnonzero()[\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;241m.\u001b[39munique())\n\u001b[1;32m   6179\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnot_found\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not in index\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mKeyError\u001b[0m: \"None of [Index(['Email', 'Phone'], dtype='object')] are in the [columns]\""
      ]
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "# -------------------------------\n",
     "# Part 1: Load Dataset & Check Missing Values\n",
     "# -------------------------------\n",
     "\n",
+    "# Define column names for maintainability\n",
+    "EMAIL_COLUMN = 'Email'\n",
+    "PHONE_COLUMN = 'Phone'\n",
+    "CUSTOMERID_COLUMN = 'CustomerID'\n",
+    "\n",
     "# Load the dataset\n",
-    "try:\n",
-    "    customer_df = pd.read_csv('customer_data.csv')\n",
-    "    print(\"✅ Customer dataset loaded successfully.\\n\")\n",
-    "except FileNotFoundError:\n",
-    "    print(\"❌ Error: customer_data.csv not found.\")\n",
-    "    raise\n",
+    "def load_dataset(file_path):\n",
+    "    try:\n",
+    "        df = pd.read_csv(file_path)\n",
+    "        print(\"✅ Customer dataset loaded successfully.\\n\")\n",
+    "        return df\n",
+    "    except FileNotFoundError:\n",
+    "        print(\"❌ Error: File not found.\")\n",
+    "        raise\n",
+    "    except pd.errors.EmptyDataError:\n",
+    "        print(\"❌ Error: No data found in the file.\")\n",
+    "        raise\n",
+    "    except pd.errors.ParserError:\n",
+    "        print(\"❌ Error: There was an issue parsing the file.\")\n",
+    "        raise\n",
+    "\n",
+    "# Load the dataset\n",
+    "customer_df = load_dataset('sample_data.csv')\n",
     "\n",
     "# Display first few rows\n",
     "print(\"📊 First 5 rows of customer data:\")\n",
     "print(customer_df.head())\n",
     "\n",
-    "# Check for missing values in 'Email' and 'Phone'\n",
-    "print(\"\\n🔍 Missing Values:\")\n",
-    "missing_values = customer_df[['Email', 'Phone']].isnull().sum()\n",
-    "print(missing_values)\n",
+    "# Display the columns in the dataset to ensure they match expectations\n",
+    "print(\"\\n📋 Columns in the dataset:\")\n",
+    "print(customer_df.columns)\n",
     "\n",
     "# -------------------------------\n",
-    "# Part 2: Identify Duplicates & Inconsistencies\n",
+    "# Part 2: Check Missing Values\n",
     "# -------------------------------\n",
     "\n",
-    "# Find duplicate emails\n",
-    "print(\"\\n📋 Duplicate Emails:\")\n",
-    "duplicate_emails = customer_df[customer_df.duplicated('Email', keep=False)]\n",
-    "print(duplicate_emails[['Email']].drop_duplicates())\n",
+    "# Function to check missing values in specific columns\n",
+    "def check_missing_values(df, columns):\n",
+    "    print(\"\\n🔍 Missing Values:\")\n",
+    "    missing_values = df[columns].isnull().sum()\n",
+    "    print(missing_values)\n",
     "\n",
-    "# -------------------------------\n",
-    "# Part 3: Generate Data Quality Report\n",
-    "# -------------------------------\n",
-    "\n",
-    "print(\"\\n🧾 Data Quality Report Summary:\")\n",
-    "\n",
-    "# Count total duplicates (all columns)\n",
-    "total_duplicates = customer_df.duplicated().sum()\n",
-    "\n",
-    "# Basic descriptive statistics\n",
-    "description = customer_df.describe(include='all')\n",
-    "\n",
-    "# Compile quality report\n",
-    "quality_report = {\n",
-    "    'Missing Values': missing_values.to_dict(),\n",
-    "    'Total Duplicate Rows': total_duplicates,\n",
-    "    'Duplicate Emails': duplicate_emails['Email'].nunique()\n",
-    "}\n",
-    "\n",
-    "print(quality_report)\n",
-    "\n",
-    "# Optionally save report\n",
-    "# pd.DataFrame.from_dict(quality_report, orient='index').to_csv(\"customer_data_quality_report.csv\")\n"
+    "# Check missing values in 'Email' and 'Phone' columns\n",
+    "check_missing_values(customer_df, [EMAIL_COLUMN, PHONE_COLUMN])\n"
    ]
   }
  ],
